--- a/index.html
+++ b/index.html
@@ -801,33 +801,59 @@
         </div>
     </section>
 
-<section id="projects" class="w-full text-white p-8 fade-in rounded-lg hover-effect">
+ <section id="projects" class="w-full text-white p-6 fade-in rounded-lg hover-effect">
+
         <div class="max-w-5xl mx-auto">
-            <h2 class="text-2xl font-bold mb-1">PORTFOLIO</h2>
-            <div style="width: 40px; height: 3px; margin: 0 auto 8px; background-image: linear-gradient(to right, #9d4edd, #eb8099);"></div>
-            <p class="text-gray-400 mb-4">Selected projects showcasing my creative work</p>
+
+            <h2 class="text-2xl font-bold mb-2">PORTFOLIO</h2>
+
+            <div style="width: 30px; height: 3px; margin: 0 auto 8px; background-image: linear-gradient(to right, #9d4edd, #eb8099);"></div>
+
+            <p class="text-gray-400 mb-4 text-sm">Selected projects showcasing my creative work</p>
+
             <div class="project-grid">
+
                 <div class="project-item">
+
                     <a href="https://github.com/Aspergilleshumania/BlogSphere" target="_blank" style="display: block;">
-                        <img src="BlogSphere.png" alt="BlogSphere" style="height:200px; width:100%;">
+
+                        <img src="BlogSphere.png" alt="BlogSphere" style="max-height: 200px; width: 100%; object-fit: cover;">
+
                         <div class="project-overlay">
+
                             <h3>BlogSphere</h3>
-                            <p>Full Stack Website using Django Framework</p>
+
+                            <p class="text-sm">Full Stack Website using Django Framework</p>
+
                         </div>
+
                     </a>
+
                 </div>
+
                 <div class="project-item">
+
                     <a href="https://github.com/rahulp0817/automation-workflow" target="_blank" style="display: block;">
-                    <img src="CogniTask.png" alt="CogniTask" style="height:200px; width:100%;">
+
+                        <img src="CogniTask.png" alt="CogniTask" style="max-height: 200px; width: 100%; object-fit: cover;">
+
                         <div class="project-overlay">
+
                             <h3>CogniTask</h3>
-                            <p>Automation Platform</p>
+
+                            <p class="text-sm">Automation Platform</p>
+
                         </div>
+
                     </a>
+
                 </div>
+
             </div>
+
         </div>
-    </section>
+
+    </section> 
 
 
 
