--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
         }
 
         /* Media Queries for Responsiveness */
-        @media screen and (max-width: 768px) {
+       @media screen and (max-width: 768px) {
             nav .nav-menu {
                 display: none !important;
             }
@@ -605,12 +605,11 @@
             }
 
             .nav-menu.active a {
-                margin: 15px 0;
-                font-size: 1.1em;
+                margin: 20px 0; /* Increased vertical margin */
             }
 
             .nav-menu a {
-                margin: 0 15px; /* Added horizontal margin for spacing */
+                margin: 0 25px; /* Increased horizontal margin for more spacing */
             }
 
             .nav-menu a:hover::after,
