--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
             background: transparent;
         }
 
-        /* Media Queries for Responsiveness */
+   /* Media Queries for Responsiveness */
         @media screen and (max-width: 768px) {
             nav .nav-menu {
                 display: none !important;
@@ -592,10 +592,9 @@
                 left: 0;
                 background-color: #080808;
                 width: 100%;
-                text-align: center;
-                padding: 10px 0; /* Reduced padding around the menu items */
+                text-align: center; /* Keep the menu items centered */
+                padding: 10px 0;
                 display: none;
-                /* Initially hidden on small screens */
                 flex-direction: column;
                 align-items: center;
             }
@@ -605,14 +604,14 @@
             }
 
             .nav-menu.active a {
-                margin: 15px 0; /* Reduced vertical margin */
-                padding: 5px 0; /* Kept the vertical padding on the link text */
-                display: inline-block; /* Ensure the underline spans the text width */
+                margin: 15px 0;
+                padding: 5px 0;
+                display: inline-block;
             }
 
             .nav-menu a {
-                margin: 0 20px; /* Slightly reduced horizontal margin */
-                position: relative; /* Needed for absolute positioning of the pseudo-element */
+                margin: 0 20px;
+                position: relative;
             }
 
             .nav-menu a:hover::after,
@@ -620,7 +619,7 @@
                 content: '';
                 position: absolute;
                 left: 0;
-                bottom: -3px; /* Kept the underline position */
+                bottom: -3px;
                 width: 100%;
                 height: 2px;
                 background-color: #c780eb;
@@ -634,12 +633,32 @@
                 transform: scaleX(1);
             }
 
+            #home {
+                align-items: flex-start; /* Align items to the start (left) */
+                text-align: left; /* Align text within the home section to the left */
+                padding-left: 30px; /* Add some left padding for better spacing */
+                padding-right: 30px; /* Add some right padding for better spacing */
+            }
+
             #home h1 {
-                font-size: 2.5rem;
+                font-size: 2.2rem; /* Slightly reduce font size for better mobile fit */
+                margin-bottom: 8px;
             }
 
             #home p.mt-3 {
-                font-size: 1.1rem;
+                font-size: 1rem; /* Slightly reduce font size */
+                line-height: 1.5; /* Improve line height for readability */
+                margin-top: 8px;
+            }
+
+            #home .mt-5 {
+                margin-top: 20px; /* Adjust button spacing */
+            }
+
+            #home .btn-outline {
+                width: 100%; /* Make the button full width for mobile */
+                text-align: center; /* Center the button text */
+                padding: 12px 20px; /* Adjust button padding */
             }
 
             #skills .max-w-2xl {
@@ -652,7 +671,6 @@
 
             .project-item img {
                 max-height: none;
-                /* Allow full height within container */
             }
 
             #about .max-w-3xl {
