--- a/index.html
+++ b/index.html
@@ -572,28 +572,47 @@
             background: transparent;
         }
 
-   /* Media Queries for Responsiveness */
+/* Media Queries for Responsiveness */
         @media screen and (max-width: 768px) {
             nav .nav-menu {
                 display: none !important;
             }
 
             nav {
-                padding: 15px;
+                padding: 10px 15px; /* Reduced vertical padding of the nav */
             }
 
             .hamburger {
                 display: block;
+                cursor: pointer;
+            }
+
+            .hamburger .bar {
+                background-color: white;
+                height: 2px; /* Slightly reduce the height of the bars */
+                margin: 4px auto; /* Slightly reduce the margin between the bars */
+            }
+
+            .hamburger.active .bar:nth-child(2) {
+                opacity: 0;
+            }
+
+            .hamburger.active .bar:nth-child(1) {
+                transform: translateY(6px) rotate(45deg); /* Adjust translation */
+            }
+
+            .hamburger.active .bar:nth-child(3) {
+                transform: translateY(-6px) rotate(-45deg); /* Adjust translation */
             }
 
             .nav-menu {
                 position: absolute;
-                top: 60px;
+                top: 50px; /* Adjust top position to align with the reduced nav height */
                 left: 0;
                 background-color: #080808;
                 width: 100%;
-                text-align: center; /* Keep the menu items centered */
-                padding: 10px 0;
+                text-align: center;
+                padding: 5px 0; /* Reduced padding around the menu items */
                 display: none;
                 flex-direction: column;
                 align-items: center;
@@ -604,13 +623,13 @@
             }
 
             .nav-menu.active a {
-                margin: 15px 0;
-                padding: 5px 0;
+                margin: 10px 0; /* Reduced vertical margin of links */
+                padding: 3px 0; /* Reduced vertical padding of link text */
                 display: inline-block;
             }
 
             .nav-menu a {
-                margin: 0 20px;
+                margin: 0 15px; /* Reduced horizontal margin of links */
                 position: relative;
             }
 
@@ -619,9 +638,9 @@
                 content: '';
                 position: absolute;
                 left: 0;
-                bottom: -3px;
+                bottom: -2px; /* Adjust bottom position of the underline */
                 width: 100%;
-                height: 2px;
+                height: 1px; /* Reduce height of the underline */
                 background-color: #c780eb;
                 transform: scaleX(0);
                 transform-origin: left;
@@ -634,32 +653,32 @@
             }
 
             #home {
-                align-items: flex-start; /* Align items to the start (left) */
-                text-align: left; /* Align text within the home section to the left */
-                padding-left: 30px; /* Add some left padding for better spacing */
-                padding-right: 30px; /* Add some right padding for better spacing */
-                 padding-top: 300px; /* Add padding to account for fixed mobile nav height */
+                align-items: flex-start;
+                text-align: left;
+                padding-left: 30px;
+                padding-right: 30px;
+                padding-top: 60px; /* Adjust padding to account for reduced mobile nav height */
             }
 
             #home h1 {
-                font-size: 2.2rem; /* Slightly reduce font size for better mobile fit */
+                font-size: 2.2rem;
                 margin-bottom: 8px;
             }
 
             #home p.mt-3 {
-                font-size: 1rem; /* Slightly reduce font size */
-                line-height: 1.5; /* Improve line height for readability */
+                font-size: 1rem;
+                line-height: 1.5;
                 margin-top: 8px;
             }
 
             #home .mt-5 {
-                margin-top: 20px; /* Adjust button spacing */
+                margin-top: 20px;
             }
 
             #home .btn-outline {
-                width: 100%; /* Make the button full width for mobile */
-                text-align: center; /* Center the button text */
-                padding: 12px 20px; /* Adjust button padding */
+                width: 100%;
+                text-align: center;
+                padding: 12px 20px;
             }
 
             #skills .max-w-2xl {
