--- a/index.html
+++ b/index.html
@@ -694,17 +694,17 @@
             }
 
             #about {
-                text-align: left; /* Align text within the about section to the left */
-                padding-left: 30px; /* Add left padding for consistency */
-                padding-right: 30px; /* Add right padding for consistency */
+                text-align: center; /* Center the text within the about section */
+                padding-left: 20px; /* Reduce left padding */
+                padding-right: 20px; /* Reduce right padding */
             }
 
             #about .max-w-3xl {
-                text-align: left; /* Ensure text within the container is also left-aligned */
+                text-align: left; /* Keep the text within the container left-aligned for natural flow */
             }
 
             #about h2 {
-                text-align: left; /* Align the heading to the left as well */
+                text-align: center; /* Center the "ABOUT ME" heading */
             }
 
             #contact .max-w-3xl {
