--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
             align-items: center;
         }
 
+        nav .logo {
+    font-size: 2xl;
+    color: #c780eb;
+       }
+
         .nav-menu.active {
             display: flex;
             flex-direction: column;
@@ -732,6 +737,11 @@
         <div class="text-2xl font-bold text-purple-400 logo">
             DK
         </div>
+        <nav class="p-4 flex justify-between items-center text-white">
+        <div class="logo">
+            <img src="path/to/your/dk_logo.png" alt="DK Logo" style="height: 30px;">
+        </div>
+        </nav>
         <div class="hamburger">
             <span class="bar"></span>
             <span class="bar"></span>
