--- a/index.html
+++ b/index.html
@@ -734,8 +734,8 @@
 
 <body>
     <nav class="p-4 flex justify-between items-center text-white">
-        <div class="text-2xl font-bold text-purple-400 logo">
-            DK
+        <div class="logo">
+            <img src="path/to/your/dk_logo.png" alt="DK Logo" style="height: 30px;">
         </div>
         <div class="hamburger">
             <span class="bar"></span>
