--- a/index.html
+++ b/index.html
@@ -699,17 +699,17 @@
             }
 
             #about {
-                text-align: center; /* Center the text within the about section */
-                padding-left: 20px; /* Reduce left padding */
-                padding-right: 20px; /* Reduce right padding */
+                text-align: left; /* Ensure text is left-aligned */
+                padding-left: 30px; /* Consistent left padding */
+                padding-right: 20px; /* Maintain some right padding */
             }
 
             #about .max-w-3xl {
-                text-align: left; /* Keep the text within the container left-aligned for natural flow */
+                text-align: left; /* Ensure text within the container is also left-aligned */
             }
 
             #about h2 {
-                text-align: center; /* Center the "ABOUT ME" heading */
+                text-align: center; /* Keep the heading centered */
             }
 
             #contact .max-w-3xl {
