--- a/index.html
+++ b/index.html
@@ -725,8 +725,10 @@
                 margin: 10px 0;
             }
 
-            .social-links {
+           .social-links {
                 margin-top: 20px;
+                display: flex; /* Enable flexbox for centering */
+                justify-content: center; /* Center the items horizontally */
             }
         }
     </style>
