--- a/index.html
+++ b/index.html
@@ -726,11 +726,11 @@
             }
 
            .social-links {
-                margin-top: 20px;
-                display: flex; /* Enable flexbox for centering */
-                justify-content: center; /* Center the items horizontally */
-            }
+            display: flex;
+            justify-content: center;
+            margin-top: 30px;
         }
+}
     </style>
 </head>
 
