--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
 
             .contact-item {
                 display: flex;
-                align-items: flex-start; /* Align items to the top */
+                align-items: center; /* Change back to center alignment */
                 margin: 15px 0;
                 color: #9d4edd;
                 cursor: pointer;
@@ -737,8 +737,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                margin-top: 3px; /* Adjust top margin for better visual alignment */
-                flex-shrink: 0; /* Prevent icon from shrinking */
+                flex-shrink: 0;
             }
 
             .contact-item:hover .icon-container {
