--- a/index.html
+++ b/index.html
@@ -943,6 +943,9 @@
 
             sections.forEach(section => observer.observe(section));
 
+
+
+        document.addEventListener("DOMContentLoaded", function () {
         const hamburger = document.querySelector(".hamburger");
         const navMenu = document.querySelector(".nav-menu");
         const nav = document.querySelector("nav");
