--- a/index.html
+++ b/index.html
@@ -764,14 +764,36 @@
             /* ... other mobile styles ... */
         }
 }
+
+    .logo-container {
+  display: flex;
+  justify-content: center; /* Center the logo horizontally */
+  align-items: center; /* Center the logo vertically */
+  /* Add any other styling for the container if needed */
+}
+
+.logo-circle {
+  width: 50px; /* Adjust the size as needed */
+  height: 50px; /* Make sure width and height are equal for a circle */
+  background-color: #black; /* Choose a background color */
+  color: #purple; /* Choose a text color */
+  border-radius: 50%; /* This makes it a circle */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px; /* Adjust the font size as needed */
+  font-weight: bold; /* Make the text bold if you want */
+}
     </style>
 </head>
 
 <body>
     <nav class="p-4 flex justify-between items-center text-white">
-        <div class="logo">
-            <img src="path/to/your/dk_logo.png" alt="DK Logo" style="height: 30px;">
-        </div>
+    <div class="logo-container">
+    <div class="logo-circle">
+            DK
+    </div>
+    </div>
         <div class="hamburger">
             <span class="bar"></span>
             <span class="bar"></span>
